[package]
name = "autorust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
base64 = "0.20.0"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.110"
serde_yaml = "0.9.30"
tokio = { version = "1.35.1", features = ["full"] }
log = "0.4.20"
lazy_static = { version = "1.4.0", features = [] }